<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/base"
            app:titleTextAppearance="@style/Toolbar.TitleText">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionBar"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_info_header"
                android:textAppearance="@style/LabelTextAppearance"
                android:paddingBottom="@dimen/padding"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_info"
                android:textAppearance="@style/LabelTextAppearance"
                android:layout_marginBottom="@dimen/margin"/>

            <Button
                android:id="@+id/close"
                style="@style/OvalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>