<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/base"
            app:titleTextAppearance="@style/Toolbar.TitleText">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progress_bar_view"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@+id/actionBar"
        android:indeterminate="true"
        android:visibility="invisible"
        app:mpb_progressStyle="horizontal"
        app:mpb_useIntrinsicPadding="false"
        tools:layout_editor_absoluteY="0dp"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress_bar_view"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@color/textColorBlue"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/asset_id_edit_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/asset_id_edit"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:hint="@string/asset_id_hint"
                            android:inputType="number"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/submit"
                        style="@style/OvalButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="2"
                        android:text="@string/submit"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/scanCode"
                    style="@style/OvalButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:maxHeight="30dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/half_margin">

                    <android.support.v4.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/half_margin"
                        android:layout_weight="2.5"
                        android:src="@drawable/ico_qr" />

                    <TextView
                        android:id="@+id/textScan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="start|center"
                        android:text="@string/scan_qr_code"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textShake"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/margin"
                            android:drawablePadding="16dp"
                            android:drawableStart="@drawable/ico_shake"
                            android:gravity="center|start"
                            android:text="Send Shake"
                            android:textColor="@color/textColorBlue"
                            android:textSize="16sp" />

                        <ProgressBar
                            android:id="@+id/shakeProgressBar"
                            style="@style/Base.Widget.AppCompat.ProgressBar"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:indeterminate="true"
                            android:visibility="invisible" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:text="@string/send_shake_description"
                        android:textColor="@color/textColorBlue"
                        android:textSize="16sp" />


                    <Button
                        android:id="@+id/shake_button"
                        style="@style/OvalButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/button_shake_label"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:drawablePadding="16dp"
                            android:drawableStart="@drawable/ico_photo"
                            android:gravity="center|start"
                            android:text="Send Photo and Location"
                            android:textColor="@color/textColorBlue"
                            android:textSize="16sp" />

                        <ProgressBar
                            android:id="@+id/photoProgressBar"
                            style="@style/Base.Widget.AppCompat.ProgressBar"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:indeterminate="true"
                            android:visibility="invisible" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin"
                        android:text="@string/send_shake_description"
                        android:textColor="@color/textColorBlue"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/photo_button"
                        style="@style/OvalButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/button_photo_label"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>